--- a/games-misc/fortune-mod-slackware/ChangeLog
+++ b/games-misc/fortune-mod-slackware/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-misc/fortune-mod-slackware
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/fortune-mod-slackware/ChangeLog,v 1.6 2007/11/03 23:21:49 tupone Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-misc/fortune-mod-slackware/ChangeLog,v 1.7 2008/08/01 18:00:24 nixnut Exp $
+
+  01 Aug 2008; nixnut <nixnut@gentoo.org> fortune-mod-slackware-1.15.ebuild:
+  Stable on ppc wrt bug 233445
 
 *fortune-mod-slackware-1.15 (03 Nov 2007)
 
