--- a/dev-python/nose/ChangeLog
+++ b/dev-python/nose/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/nose
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/nose/ChangeLog,v 1.12 2008/08/01 11:53:05 fmccor Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/nose/ChangeLog,v 1.13 2008/08/01 17:59:41 armin76 Exp $
+
+  01 Aug 2008; Raúl Porcel <armin76@gentoo.org> nose-0.9.3-r1.ebuild,
+  nose-0.10.3.ebuild:
+  Add ~ia64 wrt #233554
 
   01 Aug 2008; Ferris McCormick <fmccor@gentoo.org> nose-0.9.3-r1.ebuild,
   nose-0.10.3.ebuild:
