--- a/dev-python/sphinx/ChangeLog
+++ b/dev-python/sphinx/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/sphinx
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/sphinx/ChangeLog,v 1.7 2008/08/01 17:07:28 dev-zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/sphinx/ChangeLog,v 1.8 2008/08/01 18:00:54 armin76 Exp $
+
+  01 Aug 2008; Raúl Porcel <armin76@gentoo.org> sphinx-0.4.2.ebuild:
+  Add ~ia64 wrt #233554
 
   01 Aug 2008; Tiziano Müller <dev-zero@gentoo.org> +sphinx-0.3.ebuild:
   Re-added sphinx-0.3 to not drop keywords for ia64 and sparc until
