--- a/net-mail/vacation/ChangeLog
+++ b/net-mail/vacation/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-mail/vacation
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/vacation/ChangeLog,v 1.13 2008/07/31 07:32:12 phosphan Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/vacation/ChangeLog,v 1.14 2008/08/01 18:02:16 armin76 Exp $
+
+  01 Aug 2008; Raúl Porcel <armin76@gentoo.org> vacation-1.2.6.3.ebuild:
+  alpha/x86 stable wrt #233248
 
 *vacation-1.2.7.0 (31 Jul 2008)
 
