--- a/dev-python/pyxf86config/ChangeLog
+++ b/dev-python/pyxf86config/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pyxf86config
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyxf86config/ChangeLog,v 1.18 2008/07/28 14:07:35 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyxf86config/ChangeLog,v 1.19 2008/08/01 18:03:07 nixnut Exp $
+
+  01 Aug 2008; nixnut <nixnut@gentoo.org> pyxf86config-0.3.34-r1.ebuild:
+  Stable on ppc wrt bug 222219
 
   28 Jul 2008; Raúl Porcel <armin76@gentoo.org>
   pyxf86config-0.3.34-r1.ebuild:
