--- a/games-misc/fortune-mod-firefly/ChangeLog
+++ b/games-misc/fortune-mod-firefly/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for games-misc/fortune-mod-firefly
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/fortune-mod-firefly/ChangeLog,v 1.5 2008/08/01 17:58:03 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-misc/fortune-mod-firefly/ChangeLog,v 1.6 2008/08/01 18:04:15 armin76 Exp $
+
+  01 Aug 2008; Raúl Porcel <armin76@gentoo.org>
+  fortune-mod-firefly-2.1.1.ebuild:
+  alpha/ia64/sparc/x86 stable wrt #233442
 
   01 Aug 2008; nixnut <nixnut@gentoo.org> fortune-mod-firefly-2.1.1.ebuild:
   Stable on ppc wrt bug 233442
