--- a/dev-libs/xmlrpc-c/ChangeLog
+++ b/dev-libs/xmlrpc-c/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/xmlrpc-c
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/xmlrpc-c/ChangeLog,v 1.67 2008/07/31 17:38:35 loki_val Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/xmlrpc-c/ChangeLog,v 1.68 2008/08/01 18:05:20 nixnut Exp $
+
+  01 Aug 2008; nixnut <nixnut@gentoo.org> xmlrpc-c-1.06.27.ebuild:
+  Stable on ppc wrt bug 233123
 
 *xmlrpc-c-1.14.07-r1 (31 Jul 2008)
 
