--- a/net-mail/pflogsumm/ChangeLog
+++ b/net-mail/pflogsumm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-mail/pflogsumm
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/pflogsumm/ChangeLog,v 1.13 2008/07/27 16:54:08 bluebird Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/pflogsumm/ChangeLog,v 1.14 2008/08/01 18:06:51 armin76 Exp $
+
+  01 Aug 2008; Raúl Porcel <armin76@gentoo.org> pflogsumm-1.1.1.ebuild:
+  x86 stable wrt #232963
 
   27 Jul 2008; Friedrich Oslage <bluebird@gentoo.org>
   pflogsumm-1.1.1.ebuild:
