--- a/games-emulation/gcube/ChangeLog
+++ b/games-emulation/gcube/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-emulation/gcube
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/gcube/ChangeLog,v 1.6 2008/01/22 07:44:30 nyhm Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/gcube/ChangeLog,v 1.7 2008/08/01 18:08:01 armin76 Exp $
+
+  01 Aug 2008; Raúl Porcel <armin76@gentoo.org> gcube-0.4-r1.ebuild:
+  x86 stable wrt #232405
 
 *gcube-0.4-r1 (22 Jan 2008)
 
