--- a/www-apps/moinmoin/ChangeLog
+++ b/www-apps/moinmoin/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/moinmoin
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/moinmoin/ChangeLog,v 1.48 2008/08/01 17:19:11 wrobel Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/moinmoin/ChangeLog,v 1.49 2008/08/01 18:15:38 armin76 Exp $
+
+  01 Aug 2008; Raúl Porcel <armin76@gentoo.org> moinmoin-1.7.1.ebuild:
+  sparc/x86 stable wrt #233560
 
 *moinmoin-1.7.1 (01 Aug 2008)
 
