--- a/sys-libs/gwenhywfar/ChangeLog
+++ b/sys-libs/gwenhywfar/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/gwenhywfar
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/gwenhywfar/ChangeLog,v 1.54 2008/06/11 14:08:24 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/gwenhywfar/ChangeLog,v 1.55 2008/08/01 18:26:53 nixnut Exp $
+
+  01 Aug 2008; nixnut <nixnut@gentoo.org> gwenhywfar-2.6.2.ebuild:
+  Stable on ppc wrt bug 233536
 
 *gwenhywfar-3.3.3 (11 Jun 2008)
 
