--- a/sys-libs/libchipcard/ChangeLog
+++ b/sys-libs/libchipcard/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/libchipcard
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/libchipcard/ChangeLog,v 1.67 2008/07/31 15:05:20 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/libchipcard/ChangeLog,v 1.68 2008/08/01 18:28:33 nixnut Exp $
+
+  01 Aug 2008; nixnut <nixnut@gentoo.org> libchipcard-3.0.4.ebuild:
+  Stable on ppc wrt bug 233536
 
 *libchipcard-4.1.3 (31 Jul 2008)
 
