--- a/media-plugins/gst-plugins-farsight/ChangeLog
+++ b/media-plugins/gst-plugins-farsight/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-plugins/gst-plugins-farsight
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-farsight/ChangeLog,v 1.17 2008/07/31 22:58:51 tester Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/gst-plugins-farsight/ChangeLog,v 1.18 2008/08/01 18:40:54 cardoe Exp $
+
+  01 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
+  add GLEP 56 USE flag desc from use.local.desc
 
 *gst-plugins-farsight-0.12.9 (31 Jul 2008)
 
