--- a/net-p2p/rtorrent/ChangeLog
+++ b/net-p2p/rtorrent/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-p2p/rtorrent
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/rtorrent/ChangeLog,v 1.112 2008/07/30 07:17:48 cla Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/rtorrent/ChangeLog,v 1.113 2008/08/01 18:42:09 nixnut Exp $
+
+  01 Aug 2008; nixnut <nixnut@gentoo.org> rtorrent-0.8.2-r3.ebuild:
+  Stable on ppc wrt bug 233122
 
   30 Jul 2008; Dawid Węgliński <cla@gentoo.org> rtorrent-0.8.2-r3.ebuild:
   Stable on amd64 (bug #233122)
