--- a/games-rpg/nwn/ChangeLog
+++ b/games-rpg/nwn/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-rpg/nwn
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-rpg/nwn/ChangeLog,v 1.67 2008/07/28 17:42:57 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-rpg/nwn/ChangeLog,v 1.68 2008/08/01 18:52:28 calchan Exp $
+
+  01 Aug 2008; Denis Dupeyron <calchan@gentoo.org> Manifest:
+  Fixed Manifest, bug #227419.
 
   28 Jul 2008; Chris Gianelloni <wolf31o2@gentoo.org> metadata.xml:
   Removing myself from metadata.xml since I am retiring from the project.
