--- a/net-voip/linphone/ChangeLog
+++ b/net-voip/linphone/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-voip/linphone
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-voip/linphone/ChangeLog,v 1.13 2008/04/23 21:25:24 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-voip/linphone/ChangeLog,v 1.14 2008/08/01 18:55:36 nixnut Exp $
+
+  01 Aug 2008; nixnut <nixnut@gentoo.org> linphone-2.1.1.ebuild:
+  Stable on ppc wrt bug 210741
 
   23 Apr 2008; Markus Meier <maekke@gentoo.org> linphone-2.1.1.ebuild:
   amd64/x86 stable, bug #210741
