--- a/net-dialup/ppp/ChangeLog
+++ b/net-dialup/ppp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dialup/ppp
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/ppp/ChangeLog,v 1.222 2008/07/30 20:37:29 mrness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/ppp/ChangeLog,v 1.223 2008/08/01 18:57:23 nixnut Exp $
+
+  01 Aug 2008; nixnut <nixnut@gentoo.org> ppp-2.4.4-r15.ebuild:
+  Stable on ppc wrt bug 227183
 
 *ppp-2.4.4-r18 (30 Jul 2008)
 
