--- a/net-dialup/rp-pppoe/ChangeLog
+++ b/net-dialup/rp-pppoe/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-dialup/rp-pppoe
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dialup/rp-pppoe/ChangeLog,v 1.97 2008/07/04 17:53:37 mrness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dialup/rp-pppoe/ChangeLog,v 1.98 2008/08/01 18:59:41 nixnut Exp $
+
+  01 Aug 2008; nixnut <nixnut@gentoo.org> rp-pppoe-3.8-r2.ebuild:
+  Stable on ppc wrt bug 227197
 
   04 Jul 2008; Alin Năstac <mrness@gentoo.org> rp-pppoe-3.8-r1.ebuild,
   rp-pppoe-3.8-r2.ebuild, rp-pppoe-3.10.ebuild:
