--- a/net-proxy/ratproxy/ChangeLog
+++ b/net-proxy/ratproxy/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-proxy/ratproxy
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-proxy/ratproxy/ChangeLog,v 1.1 2008/07/08 19:57:42 drizzt Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-proxy/ratproxy/ChangeLog,v 1.2 2008/08/01 19:02:35 drizzt Exp $
+
+*ratproxy-1.51-r1 (01 Aug 2008)
+
+  01 Aug 2008; Timothy Redaelli <drizzt@gentoo.org>
+  +ratproxy-1.51-r1.ebuild:
+  Add ratproxy-report.sh wrt bug #233557.
 
 *ratproxy-1.51 (08 Jul 2008)
 
