--- a/media-gfx/sane-backends/ChangeLog
+++ b/media-gfx/sane-backends/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/sane-backends
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/sane-backends/ChangeLog,v 1.145 2008/08/01 15:18:23 phosphan Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/sane-backends/ChangeLog,v 1.146 2008/08/01 19:07:10 nixnut Exp $
+
+  01 Aug 2008; nixnut <nixnut@gentoo.org> sane-backends-1.0.19-r1.ebuild:
+  Stable on ppc wrt bug 224973
 
 *sane-backends-1.0.19-r2 (01 Aug 2008)
 
