--- a/media-video/oxine/ChangeLog
+++ b/media-video/oxine/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/oxine
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/oxine/ChangeLog,v 1.34 2008/07/29 15:34:25 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/oxine/ChangeLog,v 1.35 2008/08/01 19:13:54 nixnut Exp $
+
+  01 Aug 2008; nixnut <nixnut@gentoo.org> oxine-0.7.1.ebuild:
+  Stable on ppc wrt bug 222303
 
   29 Jul 2008; Raúl Porcel <armin76@gentoo.org> oxine-0.7.1.ebuild:
   x86 stable wrt #222303
