--- a/app-pda/gnome-pilot/ChangeLog
+++ b/app-pda/gnome-pilot/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-pda/gnome-pilot
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-pda/gnome-pilot/ChangeLog,v 1.45 2008/07/09 09:49:37 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-pda/gnome-pilot/ChangeLog,v 1.46 2008/08/01 19:16:04 nixnut Exp $
+
+  01 Aug 2008; nixnut <nixnut@gentoo.org> gnome-pilot-2.0.16.ebuild:
+  Stable on ppc wrt bug 230067
 
   09 Jul 2008; Raúl Porcel <armin76@gentoo.org> gnome-pilot-2.0.16.ebuild:
   sparc stable wrt #230067
