--- a/app-pda/gnome-pilot-conduits/ChangeLog
+++ b/app-pda/gnome-pilot-conduits/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-pda/gnome-pilot-conduits
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-pda/gnome-pilot-conduits/ChangeLog,v 1.31 2008/07/09 09:50:11 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-pda/gnome-pilot-conduits/ChangeLog,v 1.32 2008/08/01 19:17:50 nixnut Exp $
+
+  01 Aug 2008; nixnut <nixnut@gentoo.org>
+  gnome-pilot-conduits-2.0.16.ebuild:
+  Stable on ppc wrt bug 230069
 
   09 Jul 2008; Raúl Porcel <armin76@gentoo.org>
   gnome-pilot-conduits-2.0.16.ebuild:
