--- a/net-print/cups/ChangeLog
+++ b/net-print/cups/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-print/cups
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/cups/ChangeLog,v 1.316 2008/07/25 19:45:54 tgurr Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/cups/ChangeLog,v 1.317 2008/08/01 19:19:33 tgurr Exp $
+
+  01 Aug 2008; Timo Gurr <tgurr@gentoo.org> cups-1.3.8.ebuild:
+  Update SRC_URI, fixing bug #232978.
 
 *cups-1.3.8 (25 Jul 2008)
 
