--- a/dev-perl/B-Keywords/ChangeLog
+++ b/dev-perl/B-Keywords/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/B-Keywords
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/B-Keywords/ChangeLog,v 1.7 2008/02/20 19:49:13 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/B-Keywords/ChangeLog,v 1.8 2008/08/02 19:30:48 tove Exp $
+
+*B-Keywords-1.08 (02 Aug 2008)
+
+  02 Aug 2008; Torsten Veller <tove@gentoo.org> +B-Keywords-1.08.ebuild:
+  Version bump
 
   20 Feb 2008; nixnut <nixnut@gentoo.org> B-Keywords-1.06.ebuild:
   Added ~ppc wrt bug 207343
