--- a/dev-perl/CPAN-Mini/ChangeLog
+++ b/dev-perl/CPAN-Mini/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/CPAN-Mini
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/CPAN-Mini/ChangeLog,v 1.21 2007/11/10 12:05:54 drac Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/CPAN-Mini/ChangeLog,v 1.22 2008/08/02 19:41:10 tove Exp $
+
+*CPAN-Mini-0.571 (02 Aug 2008)
+
+  02 Aug 2008; Torsten Veller <tove@gentoo.org> +CPAN-Mini-0.571.ebuild:
+  Version bump
 
   10 Nov 2007; Samuli Suominen <drac@gentoo.org> CPAN-Mini-0.562.ebuild:
   amd64 stable
