--- a/dev-perl/CPAN-Mini/ChangeLog
+++ b/dev-perl/CPAN-Mini/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/CPAN-Mini
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/CPAN-Mini/ChangeLog,v 1.22 2008/08/02 19:41:10 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/CPAN-Mini/ChangeLog,v 1.23 2008/08/02 19:43:50 tove Exp $
+
+  02 Aug 2008; Torsten Veller <tove@gentoo.org> -CPAN-Mini-0.40.ebuild,
+  -CPAN-Mini-0.551.ebuild, -CPAN-Mini-0.552.ebuild:
+  Cleanup
 
 *CPAN-Mini-0.571 (02 Aug 2008)
 
