--- a/dev-perl/CPAN-Checksums/ChangeLog
+++ b/dev-perl/CPAN-Checksums/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/CPAN-Checksums
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/CPAN-Checksums/ChangeLog,v 1.17 2007/03/05 11:18:41 ticho Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/CPAN-Checksums/ChangeLog,v 1.18 2008/08/02 20:04:37 tove Exp $
+
+*CPAN-Checksums-2.00 (02 Aug 2008)
+
+  02 Aug 2008; Torsten Veller <tove@gentoo.org> +CPAN-Checksums-2.00.ebuild:
+  Version bump
 
   05 Mar 2007; Andrej Kacian <ticho@gentoo.org> CPAN-Checksums-1.050.ebuild:
   Stable on x86, bug #169152.
