--- a/media-sound/banshee/ChangeLog
+++ b/media-sound/banshee/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/banshee
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/banshee/ChangeLog,v 1.67 2008/08/01 20:33:09 loki_val Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/banshee/ChangeLog,v 1.68 2008/08/02 20:52:44 loki_val Exp $
+
+  02 Aug 2008; Peter Alfredsen <loki_val@gentoo.org>
+  banshee-1.0.0-r1.ebuild, banshee-1.2.0.ebuild:
+  Remove boo useflag from banshee-1.0.0-r1 ebuild, since it will
+  automagically depend anyway. Make boo useflag work with banshee-1.2.0, see
+  bug #233709.
 
 *banshee-1.2.0 (01 Aug 2008)
 
