--- a/media-plugins/alsa-plugins/ChangeLog
+++ b/media-plugins/alsa-plugins/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-plugins/alsa-plugins
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/alsa-plugins/ChangeLog,v 1.75 2008/06/05 07:43:57 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/alsa-plugins/ChangeLog,v 1.76 2008/08/02 21:00:29 betelgeuse Exp $
+
+*alsa-plugins-1.0.17 (02 Aug 2008)
+
+  02 Aug 2008; Petteri Räty <betelgeuse@gentoo.org>
+  +files/alsa-plugins-1.0.17-automagic.patch, +alsa-plugins-1.0.17.ebuild:
+  Version bump. Fixes bug #227043. Thanks to chutzpah for the help.
 
   05 Jun 2008; Raúl Porcel <armin76@gentoo.org> alsa-plugins-1.0.16.ebuild:
   ia64 stable
