--- a/media-libs/alsa-lib/ChangeLog
+++ b/media-libs/alsa-lib/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/alsa-lib
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/alsa-lib/ChangeLog,v 1.260 2008/06/05 07:41:25 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/alsa-lib/ChangeLog,v 1.261 2008/08/02 21:02:23 betelgeuse Exp $
+
+*alsa-lib-1.0.17 (02 Aug 2008)
+
+  02 Aug 2008; Petteri Räty <betelgeuse@gentoo.org>
+  +alsa-lib-1.0.17.ebuild:
+  Version bump. Fixes bug #227043. Thanks to chutzpah for the help.
 
   05 Jun 2008; Raúl Porcel <armin76@gentoo.org> alsa-lib-1.0.16.ebuild:
   ia64 stable
@@ -1000,9 +1006,9 @@
   11 Jul 2003; Arcady Genkin <agenkin@gentoo.org> :
   Version update.
 
-*alsa-lib-0.9.4 (03 June 2003)
+*alsa-lib-0.9.4 (03 Jun 2003)
 
-  03 June 2003; Arcady Genkin <agenkin@gentoo.org> :
+  03 Jun 2003; Arcady Genkin <agenkin@gentoo.org> :
   Version update.
 
 *alsa-lib-0.9.3 (04 May 2003)
