--- a/media-libs/alsa-oss/ChangeLog
+++ b/media-libs/alsa-oss/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/alsa-oss
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/alsa-oss/ChangeLog,v 1.109 2008/07/13 18:54:56 josejx Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/alsa-oss/ChangeLog,v 1.110 2008/08/02 21:00:24 betelgeuse Exp $
+
+*alsa-oss-1.0.17 (02 Aug 2008)
+
+  02 Aug 2008; Petteri Räty <betelgeuse@gentoo.org>
+  +alsa-oss-1.0.17.ebuild:
+  Version bump. Fixes bug #227043. Thanks to chutzpah for the help.
 
   13 Jul 2008; Joseph Jezak <josejx@gentoo.org> alsa-oss-1.0.15.ebuild:
   Marked ppc stable for bug #217075.
@@ -393,9 +399,9 @@
   29 Jul 2003; Arcady Genkin <agenkin@gentoo.org> :
   Version update.
 
-*alsa-oss-0.9.4 (03 June 2003)
+*alsa-oss-0.9.4 (03 Jun 2003)
 
-  03 June 2003; Arcady Genkin <agenkin@gentoo.org> :
+  03 Jun 2003; Arcady Genkin <agenkin@gentoo.org> :
   Version update.
 
 *alsa-oss-0.9.1 (12 Mar 2003)
