--- a/media-libs/libipoddevice/ChangeLog
+++ b/media-libs/libipoddevice/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/libipoddevice
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libipoddevice/ChangeLog,v 1.19 2008/01/10 18:19:36 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libipoddevice/ChangeLog,v 1.20 2008/08/02 21:08:11 loki_val Exp $
+
+  02 Aug 2008; Peter Alfredsen <loki_val@gentoo.org>
+  +files/libipoddevice-0.5.3-libsgutils2.patch, libipoddevice-0.5.3.ebuild:
+  Fix building with >=sys-apps/sg3_utils-1.26, bug 229641. Ed Catmur
+  <ed@catmur.co.uk> supplied the patch. Again.
 
   10 Jan 2008; Samuli Suominen <drac@gentoo.org> libipoddevice-0.5.3.ebuild:
   Fix depends wrt #204868
