--- a/media-libs/ming/ChangeLog
+++ b/media-libs/ming/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/ming
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/ming/ChangeLog,v 1.46 2008/07/29 23:20:37 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/ming/ChangeLog,v 1.47 2008/08/02 21:20:28 corsair Exp $
+
+  02 Aug 2008; Markus Rothe <corsair@gentoo.org> ming-0.3.0-r1.ebuild:
+  Stable on ppc64; bug #222319
 
   29 Jul 2008; Jeroen Roovers <jer@gentoo.org> ming-0.3.0-r1.ebuild:
   Stable for HPPA (bug #222319).
