--- a/dev-java/xpp3/ChangeLog
+++ b/dev-java/xpp3/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/xpp3
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/xpp3/ChangeLog,v 1.20 2008/07/27 08:05:00 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/xpp3/ChangeLog,v 1.21 2008/08/02 21:27:04 corsair Exp $
+
+  02 Aug 2008; Markus Rothe <corsair@gentoo.org> xpp3-1.1.4c-r1.ebuild:
+  Stable on ppc64; bug #232688
 
   27 Jul 2008; nixnut <nixnut@gentoo.org> xpp3-1.1.4c-r1.ebuild:
   Stable on ppc wrt bug 232688
