--- a/app-accessibility/espeak/ChangeLog
+++ b/app-accessibility/espeak/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-accessibility/espeak
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/espeak/ChangeLog,v 1.50 2008/08/01 17:52:58 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/espeak/ChangeLog,v 1.51 2008/08/02 21:33:09 corsair Exp $
+
+  02 Aug 2008; Markus Rothe <corsair@gentoo.org> espeak-1.37-r1.ebuild:
+  Stable on ppc64; bug #233112
 
   01 Aug 2008; nixnut <nixnut@gentoo.org> espeak-1.37-r1.ebuild:
   Stable on ppc wrt bug 233112
