--- a/net-p2p/rtorrent/ChangeLog
+++ b/net-p2p/rtorrent/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-p2p/rtorrent
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/rtorrent/ChangeLog,v 1.114 2008/08/01 21:16:53 loki_val Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/rtorrent/ChangeLog,v 1.115 2008/08/02 21:36:22 corsair Exp $
+
+  02 Aug 2008; Markus Rothe <corsair@gentoo.org> rtorrent-0.8.2-r3.ebuild:
+  Stable on ppc64; bug #233122
 
   01 Aug 2008; Peter Alfredsen <loki_val@gentoo.org>
   +files/rtorrent-0.8.2-gcc34.patch, rtorrent-0.8.2-r3.ebuild:
