--- a/x11-wm/awesome/ChangeLog
+++ b/x11-wm/awesome/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-wm/awesome
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/awesome/ChangeLog,v 1.25 2008/08/01 17:56:39 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/awesome/ChangeLog,v 1.26 2008/08/02 21:38:20 corsair Exp $
+
+  02 Aug 2008; Markus Rothe <corsair@gentoo.org> awesome-2.3.2.ebuild:
+  Stable on ppc64; bug #233293
 
   01 Aug 2008; nixnut <nixnut@gentoo.org> awesome-2.3.2.ebuild:
   Stable on ppc wrt bug 233293
