--- a/games-misc/fortune-mod-firefly/ChangeLog
+++ b/games-misc/fortune-mod-firefly/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for games-misc/fortune-mod-firefly
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/fortune-mod-firefly/ChangeLog,v 1.7 2008/08/01 19:53:35 ken69267 Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-misc/fortune-mod-firefly/ChangeLog,v 1.8 2008/08/02 21:39:10 corsair Exp $
+
+  02 Aug 2008; Markus Rothe <corsair@gentoo.org>
+  fortune-mod-firefly-2.1.1.ebuild:
+  Stable on ppc64; bug #233442
 
   01 Aug 2008; Kenneth Prugh <ken69267@gentoo.org>
   fortune-mod-firefly-2.1.1.ebuild:
