--- a/app-portage/ufed/ChangeLog
+++ b/app-portage/ufed/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/ufed
 # Copyright 2003-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/ufed/ChangeLog,v 1.64 2008/08/01 22:12:24 fmccor Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/ufed/ChangeLog,v 1.65 2008/08/02 21:42:40 corsair Exp $
+
+  02 Aug 2008; Markus Rothe <corsair@gentoo.org> ufed-0.40-r10.ebuild:
+  Stable on ppc64; bug #233644
 
   01 Aug 2008; Ferris McCormick <fmccor@gentoo.org> ufed-0.40-r10.ebuild:
   Sparc stable --- Bug #233644 --- All looks good.
