--- a/games-misc/cowsay/ChangeLog
+++ b/games-misc/cowsay/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-misc/cowsay
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-misc/cowsay/ChangeLog,v 1.20 2008/08/02 09:57:01 bluebird Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-misc/cowsay/ChangeLog,v 1.21 2008/08/02 21:46:11 corsair Exp $
+
+  02 Aug 2008; Markus Rothe <corsair@gentoo.org> cowsay-3.03-r1.ebuild:
+  Stable on ppc64; bug #233671
 
   02 Aug 2008; Friedrich Oslage <bluebird@gentoo.org> cowsay-3.03-r1.ebuild:
   Stable on sparc, bug #233671
