--- a/sys-devel/gcc/ChangeLog
+++ b/sys-devel/gcc/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-devel/gcc
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.658 2008/08/02 11:09:06 pchrist Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.659 2008/08/03 01:42:59 halcy0n Exp $
+
+  03 Aug 2008; Mark Loeser <halcy0n@gentoo.org> Manifest:
+  Fix bug #220779; thanks to Andrew John Hughes <gnu_andrew AT member DOT
+  fsf DOT org> and James Le Cuirot <chewi AT aura-online DOT co DOT uk>
 
   02 Aug 2008; Panagiotis Christopoulos <pchrist@gentoo.org> metadata.xml:
   Update metadata.xml to include USE flag descriptions. Entries taken from
