--- a/media-video/gxine/ChangeLog
+++ b/media-video/gxine/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-video/gxine
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/gxine/ChangeLog,v 1.91 2007/10/08 10:08:29 corsair Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-video/gxine/ChangeLog,v 1.92 2008/08/03 02:29:29 chutzpah Exp $
+
+*gxine-0.5.903 (03 Aug 2008)
+
+  03 Aug 2008; Patrick McLean <chutzpah@gentoo.org> +gxine-0.5.903.ebuild:
+  Version bump.
 
   08 Oct 2007; Markus Rothe <corsair@gentoo.org> gxine-0.5.11.ebuild:
   Stable on ppc64
