--- a/net-misc/wicd/ChangeLog
+++ b/net-misc/wicd/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-misc/wicd
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/wicd/ChangeLog,v 1.2 2008/08/01 16:17:55 darkside Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/wicd/ChangeLog,v 1.3 2008/08/03 02:52:19 darkside Exp $
+
+*wicd-1.5.0 (03 Aug 2008)
+
+  03 Aug 2008; Jeremy Olexa <darkside@gentoo.org> -files/wicd-1.4.2-init.d,
+  +files/wicd-1.5.0-init.d, -files/wicd-1.5.0_rc11-init.d,
+  -wicd-1.4.2.ebuild, -wicd-1.5.0_rc11.ebuild, +wicd-1.5.0.ebuild:
+  Version bump. add ~x86 kw. Remove old.
 
   01 Aug 2008; Jeremy Olexa <darkside@gentoo.org>
   +files/wicd-1.5.0_rc11-init.d, -files/wicd-1.5.0_rc5-init.d,
