--- a/x11-libs/libwnck/ChangeLog
+++ b/x11-libs/libwnck/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libwnck
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libwnck/ChangeLog,v 1.200 2008/07/30 21:41:23 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libwnck/ChangeLog,v 1.201 2008/08/03 03:38:03 leio Exp $
+
+  03 Aug 2008; Mart Raudsepp <leio@gentoo.org> -libwnck-2.22.1.ebuild:
+  Remove old
 
   30 Jul 2008; Brent Baude <ranger@gentoo.org> libwnck-2.22.3.ebuild:
   Marking libwnck-2.22.3 ppc stable for bug 229709
