--- a/net-misc/curl/ChangeLog
+++ b/net-misc/curl/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/curl
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/curl/ChangeLog,v 1.124 2008/08/02 21:35:06 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/curl/ChangeLog,v 1.125 2008/08/03 04:31:47 dragonheart Exp $
+
+  03 Aug 2008; Daniel Black <dragonheart@gentoo.org> -curl-7.15.5-r1.ebuild,
+  -curl-7.18.1.ebuild:
+  small purge since it caused problems for people
 
   02 Aug 2008; Markus Rothe <corsair@gentoo.org> curl-7.18.2.ebuild:
   Stable on ppc64; bug #233122
