--- a/media-sound/squeezecenter/ChangeLog
+++ b/media-sound/squeezecenter/ChangeLog
@@ -1,6 +1,18 @@
 # ChangeLog for media-sound/squeezecenter
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/squeezecenter/ChangeLog,v 1.19 2008/07/29 22:29:00 lavajoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/squeezecenter/ChangeLog,v 1.20 2008/08/03 04:35:28 lavajoe Exp $
+
+*squeezecenter-7.1.0 (03 Aug 2008)
+
+  03 Aug 2008; Joe Peterson <lavajoe@gentoo.org>
+  +files/filepaths-7.1-gentoo.patch, +files/mDNSResponder-7.1-gentoo.patch,
+  +files/Gentoo-plugins-README.txt, +files/avahi-squeezecenter.service,
+  +files/dbcreate-gentoo.sql, +files/dbdrop-gentoo.sql,
+  +files/squeezecenter.conf.d, +files/squeezecenter.init.d,
+  +files/squeezecenter.logrotate.d, +files/squeezecenter.prefs,
+  -squeezecenter-7.0.ebuild, -squeezecenter-7.0-r1.ebuild,
+  -squeezecenter-7.0.2_beta20080530.ebuild, +squeezecenter-7.1.0.ebuild:
+  Add version 7.1.0; remove old versions
 
   29 Jul 2008; Joe Peterson <lavajoe@gentoo.org> metadata.xml:
   Add local use flags to metadata
