--- a/media-plugins/alsa-plugins/ChangeLog
+++ b/media-plugins/alsa-plugins/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/alsa-plugins
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/alsa-plugins/ChangeLog,v 1.76 2008/08/02 21:00:29 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/alsa-plugins/ChangeLog,v 1.77 2008/08/03 08:02:00 betelgeuse Exp $
+
+  03 Aug 2008; Petteri Räty <betelgeuse@gentoo.org>
+  alsa-plugins-1.0.14.ebuild, alsa-plugins-1.0.16.ebuild:
+  ffmpeg support doesn't work with latest ffmpeg so require an old version
 
 *alsa-plugins-1.0.17 (02 Aug 2008)
 
