--- a/dev-util/ftjam/ChangeLog
+++ b/dev-util/ftjam/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/ftjam
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/ftjam/ChangeLog,v 1.11 2008/03/17 00:28:28 dirtyepic Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/ftjam/ChangeLog,v 1.12 2008/08/03 08:35:40 dirtyepic Exp $
+
+  03 Aug 2008; Ryan Hill <dirtyepic@gentoo.org>
+  +files/ftjam-2.5.3-i-hate-yacc.patch, ftjam-2.5.3_rc2.ebuild:
+  Fix build error on some systems caused by our bison/yacc collision
+  workarounds by explictly calling bison always. Thanks to everyone on bug
+  #213759 who provided info and testing.
 
   17 Mar 2008; Ryan Hill <dirtyepic@gentoo.org> ftjam-2.5.3_rc2.ebuild:
   Stable on amd64.
